versioned_docs/version-1.18.x/http-api/entry-api/delete_data.mdx
---
title: Delete Data
description: HTTP Endpoints for deleting data from an entry in the database.
---

<head>
  <link
    rel="canonical"
    href="https://www.reduct.store/docs/http-api/entry-api/delete_data"
  />
</head>

# Entry API to Delete Data

The API provides several endpoints for deleting data from an **[entry](../../glossary#entry)** in the database. It can be an entire entry, a specific **[record](../../glossary#record)**, a batch of records in a single request or records within a time range.

## Remove a Record from an Entry

The method removes a record from an entry or the entire entry.

:::danger
If the `ts` query parameter is set, the record with the timestamp is removed.
Otherwise, the entire entry is removed.
:::

If authentication is enabled, the method needs a valid API token with read access to the entry's **[bucket](../../glossary#bucket)**.

**Changes**:

- Version 1.6: initially, the method removed only the entire entry.
- Version 1.12: the method can remove a record with a specific timestamp by setting the `ts` query parameter.
- Version 1.18: deleting an entire entry (no `ts`) is non-blocking; cleanup continues in the background.
- Version 1.18: returns `409 Conflict` if the bucket or entry is being deleted.

import SwaggerComponent from "@site/src/components/SwaggerComponent";

<SwaggerComponent
    method="DELETE"
    path="/api/v1/b/:bucket_name/:entry_name"
    summary="Remove a record from an entry or the entire entry"
    parameters={
        [
            {
                type: "path",
                details: {
                    name: ":bucket_name",
                    description: "Name of bucket",
                    isRequired: true,
                },
            },
            {
                type: "path",
                details: {
                    name: ":entry_name",
                    description: "Name of entry",
                    isRequired: true,
                },
            },
            {
                type: "query",
                details: {
                    name: "ts",
                    dataType: "Integer",
                    description: "A UNIX timestamp in microseconds. If it is set, the record with the timestamp is removed. If it is not set, the entire entry is removed.",
                    isRequired: false,
                },
            }
        ]
    }
    responses={[
        {
            status: "200",
            message: "OK",
            summary: "The entry has been removed",
        },
        {
            status: "409",
            message: "Conflict",
            summary: "The bucket is being deleted or the entry is being deleted",
        },
        {
            status: "401",
            message: "Unauthorized",
            summary: "Access token is invalid or empty",
        },
        {
            status: "403",
            message: "Forbidden",
            summary: "Access token doesn't have the necessary permissions",
        },
        {
            status: "404",
            message: "Not Found",
            summary: "The bucket, entry or record doesn't exist",
        },
    ]}

/>

## Remove a Batch of Records from an Entry

The method removes a batch of records from an entry. The list of records to remove is sent in the headers of
the request. See [the Batch Protocol](/docs/http-api/entry-api/index.mdx#batch-protocol) section for more details.

If authentication is enabled, the method needs a valid API token with read access to the entry's bucket.

**Changes**:

- Version 1.12: the method was introduced.
- Version 1.18: returns `409 Conflict` if the bucket or entry is being deleted.

<SwaggerComponent
    method="DELETE"
    path="/api/v1/b/:bucket_name/:entry_name/batch"
    summary="Remove a batch of records from an entry"
    parameters={
        [
            {
                type: "path",
                details: {
                    name: ":bucket_name",
                    description: "Name of bucket",
                    isRequired: true,
                },
            },
            {
                type: "path",
                details: {
                    name: ":entry_name",
                    description: "Name of entry",
                    isRequired: true,
                },
            },
        ]
    }
    responses={
        [
            {
                status: "200",
                message: "OK",
                summary: "The records have been removed",
            }, {
            status: "400",
            message:
                "Bad Request",
            summary:
                "Posted content bigger or smaller than content-length",
        },
            {
                status: "401",
                message:
                    "Unauthorized",
                summary:
                    "Access token is invalid or empty",
            },
            {
                status: "403",
                message:
                    "Forbidden",
                summary:
                    "Access token doesn't have the necessary permissions",
            },
            {
                status: "404",
                message:
                    "Not Found",
                summary:
                    "The bucket or entry doesn't exist",
            },
            {
                status: "409",
                message:
                    "Conflict",
                summary:
                    "The bucket is being deleted or the entry is being deleted",
            },
            {
                status: "422",
                message:
                    "Unprocessable Entity",
                summary:
                    "Malformed request",
            },
        ]}

/>

## Remove Records within a Time Range

The method removes records within a time range from an entry. The time range is specified in the query
parameters.
The method can return errors for specific records that were not removed in the response headers according to
the [Batch Protocol](/docs/http-api/entry-api/index.mdx#batch-protocol).

Additionally, you can specify filters to remove only records that match the filter criteria.

If authentication is enabled, the method needs a valid API token with read access to the entry's bucket.

**Changes**:

- Version 1.12: the method was introduced.
- Version 1.18: returns `409 Conflict` if the bucket or entry is being deleted.

:::warning
Since version 1.13, the method is deprecated. Use the [**Query API**](/docs/http-api/entry-api/run_query.mdx) instead.
:::

<SwaggerComponent
    method="DELETE"
    path="/api/v1/b/:bucket_name/:entry_name/q"
    summary="Remove records within a time range"
    parameters={[
        {
            type: "path",
            details: {
                name: ":bucket_name",
                description: "Name of bucket",
                isRequired: true,
            },
        },
        {
            type: "query",
            details: {
                name: "start",
                description:
                    "A UNIX timestamp in microseconds. If not set, the query starts from the oldest record in the entry.",
                dataType: "Integer",
                isRequired: false,
            },
        },
        {
            type: "query",
            details: {
                name: "stop",
                description:
                    "A UNIX timestamp in microseconds. If not set, the query starts from the latest record in the entry.",
                dataType: "Integer",
                isRequired: false,
            },
        },
        {
            type: "path",
            details: {
                name: ":entry_name",
                description: "Name of entry",
                isRequired: true,
            },
        },
        {
            type: "query",
            details: {
                name: "include-<label name>",
                description: "Remove records that have a certain value of a label.",
                isRequired: false,
            },
        },
        {
            type: "query",
            details: {
                name: "exclude-<label name>",
                description:
                    "Remove records that don't have a certain value of a label.",
                isRequired: false,
            },
        },
        {
            type: "query",
            details: {
                name: "each_n",
                description: "Remove only every N-th record",
                dataType: "Integer",
                isRequired: false,
            },
        },
        {
            type: "query",
            details: {
                name: "each_s",
                description: "Remove only one record per S seconds",
                dataType: "Float",
                isRequired: false,
            },
        },
    ]}
    responses={[
        {
            status: "200",
            message: "OK",
            description: (
                <pre>
          <code>
            {`{
        "removed_records": "integer" // Number of removed records
        }`}
          </code>
        </pre>
            ),
        },
        {
            status: "401",
            message: "Unauthorized",
            summary: "Access token is invalid or empty",
        },
        {
            status: "403",
            message: "Forbidden",
            summary: "Access token doesn't have the required permissions",
        },
        {
            status: "409",
            message: "Conflict",
            summary: "The bucket is being deleted or the entry is being deleted",
        },
        {
            status: "404",
            message: "Not Found",
            summary: "The bucket or entry doesn't exist",
        },
        {
            status: "422",
            message: "Unprocessable Entity",
            summary: "Malformed request",
        },
    ]}

/>
